# VarioGrad

./: .gitignore  00.set_directories.sh  01.create_cortical_mask.py  02.downsample_surfaces.sh  02_1.average_downsampled_surface.sh  02a.downsample_surfaces.sh  02b.average_downsampled_surface.py  02b.average_downsampled_surface.sh  03.remove_medial_wall.py  04.geodesic_distance.py  05.gdist_similarity.py  06.joint_diffusion_maps.py  06.joint_embedding.py  06.joint_embedding_ja.py  06.joint_embedding_py.py  07.generalized_cca.py  08.within_subj_similarity.py  09.between_subj_similarity.py  10.identification_accuracy.py  11.FC_embedding.py  11.downsample_timeseries.py  12.joint_embedding_fc.py  13.experimental_variogram.py  13.geo-embedding_dist.py  README.md  concatenate_embeddings.py  pyproject.toml  requirements.txt
LatticeKriging/: LK.analysis.R  LK.searchlight.R  LK.searchlight.dev.R  R_requirements.txt  setup.R  tmp.LK.searchlight.dev.R
notebooks/: Figures_cluster.ipynb  Figures_local.ipynb  stat_tests.ipynb
scripts/: 00.init_dataset.py  00.set_directories.sh  00a.train_test_split.py  00b.init_dataset.py  01.create_cortical_mask.py  02a.downsample_surfaces.py  02a.downsample_surfaces.sh  02b.average_downsampled_surface.py  03.remove_medial_wall.py  04.geodesic_distance.py  05.gdist_similarity.py  05a.geometry_JE.py  05b.create_geoJE_archives.py  05c.create_searchlights.py  06.downsample_timeseries.py  06.joint_diffusion_maps.tmp.py  06.joint_embedding.py  06a.geometry_JE.py  06b.create_geoJE_archives.py  07.generalized_cca.py  07.within_subj_distance_correlation.py  (+11 more)
(+29 files in other folders)
