[project]
name = "variograd_utils"
version = "0.1.0"
description = "This importable package contains the modules used in the VarioGrad research project."
authors = [{ name = "F. Alberti", email = "fnc.alberti@gmail.com" }]
readme = "README.md"
requires-python = ">=2.9"
dependencies = [
    "numpy==1.24.2",
    "scipy==1.12.0",
    "scikit-learn==1.1.3",
    "nilearn==0.9.2",
    "matplotlib==3.8.3",
    "joblib==1.4.2",
    "nibabel==4.0.2",
    "hcp_utils==0.1.0",
    "surfdist @ git+https://github.com/alberti-f/surfdist.git",
]

[project.urls]
"Homepage" = "https://github.com/alberti-f/VarioGrad"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"